fix: serial ring buffer size config

--- a/include/mcconfig.h.in
+++ b/include/mcconfig.h.in
@@ -18,8 +18,26 @@
 
 /* UART */
 #define BSP_UART_BUFFER_SIZE  @BSP_UART_BUFFER_SIZE@
-#define BSP_UART1_TX_BUFSIZE  @BSP_UART1_TX_BUFSIZE@
-#define BSP_UART1_RX_BUFSIZE  @BSP_UART1_RX_BUFSIZE@
+#cmakedefine BSP_UART1_TX_BUFSIZE  @BSP_UART1_TX_BUFSIZE@
+#cmakedefine BSP_UART1_RX_BUFSIZE  @BSP_UART1_RX_BUFSIZE@
+#cmakedefine BSP_UART2_TX_BUFSIZE  @BSP_UART2_TX_BUFSIZE@
+#cmakedefine BSP_UART2_RX_BUFSIZE  @BSP_UART2_RX_BUFSIZE@
+#cmakedefine BSP_UART3_TX_BUFSIZE  @BSP_UART3_TX_BUFSIZE@
+#cmakedefine BSP_UART3_RX_BUFSIZE  @BSP_UART3_RX_BUFSIZE@
+#cmakedefine BSP_UART4_TX_BUFSIZE  @BSP_UART4_TX_BUFSIZE@
+#cmakedefine BSP_UART4_RX_BUFSIZE  @BSP_UART4_RX_BUFSIZE@
+#cmakedefine BSP_UART5_TX_BUFSIZE  @BSP_UART5_TX_BUFSIZE@
+#cmakedefine BSP_UART5_RX_BUFSIZE  @BSP_UART5_RX_BUFSIZE@
+#cmakedefine BSP_UART6_TX_BUFSIZE  @BSP_UART6_TX_BUFSIZE@
+#cmakedefine BSP_UART6_RX_BUFSIZE  @BSP_UART6_RX_BUFSIZE@
+#cmakedefine BSP_UART7_TX_BUFSIZE  @BSP_UART7_TX_BUFSIZE@
+#cmakedefine BSP_UART7_RX_BUFSIZE  @BSP_UART7_RX_BUFSIZE@
+#cmakedefine BSP_UART8_TX_BUFSIZE  @BSP_UART8_TX_BUFSIZE@
+#cmakedefine BSP_UART8_RX_BUFSIZE  @BSP_UART8_RX_BUFSIZE@
+#cmakedefine BSP_LPUART1_TX_BUFSIZE  @BSP_LPUART1_TX_BUFSIZE@
+#cmakedefine BSP_LPUART1_RX_BUFSIZE  @BSP_LPUART1_RX_BUFSIZE@
+#cmakedefine BSP_LPUART2_TX_BUFSIZE  @BSP_LPUART2_TX_BUFSIZE@
+#cmakedefine BSP_LPUART2_RX_BUFSIZE  @BSP_LPUART2_RX_BUFSIZE@
 #cmakedefine BSP_USING_UART1
 #cmakedefine BSP_USING_UART2
 #cmakedefine BSP_USING_UART3
