feat: add mc_object_t type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ add_library(micoopos
     src/device.c
     src/ringbuffer.c
     src/log.c
-    src/mclib.c
+    src/mcutils.c
 )
 
 target_link_libraries(micoopos PRIVATE archlib driverslib)
