fix: log assert enable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ add_library(micoopos
     src/mcutils.c
 )
 
-target_link_libraries(micoopos PRIVATE archlib driverslib)
+target_link_libraries(micoopos PRIVATE archlib)
+target_link_libraries(micoopos INTERFACE driverslib)
 
 if(TARGET componentslib)
     target_link_libraries(micoopos PUBLIC componentslib)
@@ -28,4 +29,10 @@ endif()
 
 target_include_directories(micoopos PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(micoopos PUBLIC include drivers/include)
-target_compile_definitions(micoopos PUBLIC LOG_LEVEL=${LOG_LEVEL} LOG_COLOR_ENABLE LOG_ASSERT_ENABLE)
+target_compile_definitions(micoopos PUBLIC LOG_LEVEL=${LOG_LEVEL})
+if(LOG_ASSERT_ENABLE)
+    target_compile_definitions(micoopos PUBLIC LOG_ASSERT_ENABLE)
+endif()
+if(LOG_COLOR_ENABLE)
+    target_compile_definitions(micoopos PUBLIC LOG_COLOR_ENABLE)
+endif()
